v0.0.9
- changed XMLWriter.write to output pretty-printed XML
- normalized Text in XML output
- added checks and replacements for bad subfield codes and indicator values
- added check and replacement for invalid control codes in xml data values
- added bin/marc2xml
- collapsed tc_xmlreader.rb tc_xmlwriter.rb into tc_xml.rb for full write/read
  test.


v0.0.8  Mon Jan 16 22:31:00 EST 2006
- removed control tests out of tc_field.rb into tc_control.rb 
- fixed some formatting
- changed control/field to controlfield/datafield
- added == check for controlfield
- removed namespace declarations on record elements in favor of default 
  namespace on collection element
- added spaces around subfield code and delimeter in to_s
- fixed up relevant tests that were expecting old formatting
- fixed xmlreader strip_ns which was rerturning Nil when no namespace
  was found on an element (exposed by namespace changes).


v0.0.7  Mon Jan  2 21:39:28 CST 2006
- MARC::XMLWriter added
- removed encode/decode methods in MARC::MARC21 into MARC::Writer and 
  MARC::Reader respectively. This required pushing MARC21 specific constants 
  out into MARC::Constants which is required as necessary.
- moved encode from MARC::MARXML into MARC::XMLWriter and added constants
  to MARC::Constants
- added MARC::XMLReader for reading MARX as XML
- added xml reading tests
- fixed indentation to be two spaces

v0.0.6  Tue Oct 18 09:33:12 CDT 2005
- MARC::MARC21::decode throws an exception when a directory can't be found.
  Exception is caught and ignored in MARC::ForgivingReader

v0.0.5  Tue Oct 18 01:50:40 CDT 2005
- when unspecified field indicators are forced to blanks
- checking for when a field appears to not have indicators and subfields in
  which case the field is skipped entirely

v0.0.4  Tue Oct 18 00:39:50 CDT 2005
- fixed off by one error when reading in leader, previous versions were
  reading an extra character

v0.0.3  Mon Oct 17 22:51:23 CDT 2005